[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
base64 = "0.13"
diesel = { version = "2.0.2", features = ["r2d2"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
default-features = false


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]
